ChatsStateHandler finished